[startkde] Export LC_TIME again

BUG: 416670
FIXED-IN: 5.18.0

Differential Revision: https://phabricator.kde.org/D26981